# linux_programming_interface

./: CMakeLists.txt  README.md
include/lib/: error_functions.h  get_num.h  tlpi_hdr.h
src/fileio/: CMakeLists.txt  bad_exclusive_open.c  copy.c  large_file.c  seek_io.c  t_readv.c
src/lib/: CMakeLists.txt  error_functions.c  get_num.c
src/proc/: CMakeLists.txt  display_env.c  mem_segments.c  modify_env.c  necho.c
